# rhope

./: CMakeLists.txt  config.json
hdr/: config.h  rhope.h
psrc/: telnet.c
src/: config.c  core.c  rhope.c
testdir/: config.json
